<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/realitivelayout"
    android:padding="15dp"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
     >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:background="@drawable/currency"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:maxHeight="100dp"
            android:maxWidth="100dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/txtViewAppName"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:textColor="#ff000000"
            android:background="#ffffffff"
            android:layout_margin="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ConvertFromCurrencyLabel"
                android:id="@+id/txtView_convertFromHeading"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"
                android:padding="2dp" />

            <Spinner
                android:id="@+id/SpCurrencyFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextConvertFrom" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/convertToLabel"
                android:id="@+id/txtView_convertToHeading"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"
                android:padding="2dp" />

            <Spinner
                android:id="@+id/SpCurrencyTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textConversionResults"
            android:id="@+id/txtViewResults"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="#ff000000"
            android:autoText="false"
            android:gravity="center|center_vertical|center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/ConvertBtn"
            android:id="@+id/button"
            android:onClick="convert"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</RelativeLayout>
